--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
 itsdangerous==2.1.2
 Jinja2==3.1.3
+jsonify==0.5
 MarkupSafe==2.1.4
 marshmallow==3.20.2
 marshmallow-sqlalchemy==0.30.0
