--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.13.1
 bcrypt==4.1.2
 blinker==1.7.0
 click==8.1.7
@@ -5,14 +6,16 @@ Flask==3.0.1
 Flask-Bcrypt==1.0.1
 Flask-JWT-Extended==4.6.0
 flask-marshmallow==1.1.0
+Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
 itsdangerous==2.1.2
 Jinja2==3.1.3
-jsonify==0.5
+Mako==1.3.2
 MarkupSafe==2.1.4
 marshmallow==3.20.2
 marshmallow-sqlalchemy==0.30.0
+migrate==0.3.8
 packaging==23.2
 psycopg2-binary==2.9.9
 PyJWT==2.8.0
